--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,29 +1,37 @@
 name: golang-pipeline
-on: push
+on:
+  push:  # Pipeline запускается на push
+    tags: # Добавляем условие на запуск для тегов
+      - 'v*'
+
 jobs:
+  # Первый job: проверка кода
   test:
     runs-on: ubuntu-latest
-    container: golang:1.22
+    container: golang:1.22  # Используем контейнер с Golang 1.22
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Run Unit Tests
-        run: GOOS=linux GOARCH=amd64 go test
-
-      - name: Vet
         run: |
-          go vet ./...
+          GOOS=linux GOARCH=amd64 go test ./...  # Запуск тестов для всех пакетов
 
+      - name: Run Go Vet (Code analysis)
+        run: |
+          go vet ./...  # Проверка кода на ошибки
+
+  # Второй job: деплой в Docker Hub
   deploy:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: test
-    if: startsWith(github.ref, 'refs/tags')
+    needs: test  # Выполняется только после успешного выполнения тестов
+    if: startsWith(github.ref, 'refs/tags')  # Выполняется только для тегов
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
@@ -32,13 +40,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract Docker metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@v5.5.1
         with:
           images: <Docker ID>/13_final
 
-      - name: Build and push Docker Inage
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
